--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
               <label>Department</label>
               <input type="text" />
             </div>
+            <div class="clickers">
+              <label>Cancel</label>
+              <input type="button">
+              <label>Save</label>
+              <input type="button">
+            </div>
           </form>
         </div>
         <div class="spacer"></div>
